# hms-backend/docs/swagger.yaml
@@ -278,27 +278,46 @@ paths:
         '400':
           description: Invalid input
 
-  /feedback/assignment/{id}:
+  /feedback/users/{userId}:
     get:
-      summary: Get feedbacks for a specific assignment
-      security:
-        - BearerAuth: [] # Require authentication
+      summary: Get all feedback for a specific user
+      description: Retrieve all feedback on all submissions for a specific user by their user ID.
       parameters:
-        - name: id
+        - name: userId
           in: path
           required: true
-          description: ID of the assignment
+          description: The ID of the user for whom to retrieve feedback.
           schema:
             type: string
       responses:
         '200':
-          description: List of feedbacks
+          description: A list of feedback for the user
           content:
             application/json:
               schema:
                 type: array
                 items:
                   $ref: '#/components/schemas/Feedback'
+        '404':
+          description: No feedback found for the user
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: No feedback found for this user's submissions.
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Internal server error
 
   /feedback/{id}:
     get:
